03/17/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Altered AdapterNode to support namespaces better. It handles adding and
      removing namespace declarations much better.

03/16/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug with the debug option in logging
    * Added a command line option to enable printing debug to the command line.
    * Fixed a bug in setModel() in XMLDocument

03/13/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the getAdapterNode() method in XMLDocument to check if the
      document is parsed and if not then attempt to go to parsed mode instead of
      simply returning null when in non-parsed mode.

03/09/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Released jsXe 0.3 pre15

03/08/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added dependency checking for plugins.
    * Added plugin error dialog

03/04/2005  version 0.4 pre15   Ian Lewis <IanLewis@member.fsf.org>

    * Added better error checking when loading plugins.
    * Updated the plugin manager to look nicer. Needs a bit more work though.

03/03/2005  version 0.4 pre14   Ian Lewis <IanLewis@member.fsf.org>

    * Added some changes for dependency tracking of plugins.

03/02/2005  version 0.3 pre13   Ian Lewis <IanLewis@member.fsf.org>

    * Added logging functionality.

03/01/2005  version 0.3 pre12   Ian Lewis <IanLewis@member.fsf.org>

    * Small additions to XMLDocument to prepare for DTD support.
      Nothing to speak of.

02/16/2005  version 0.3 pre11   Ian Lewis <IanLewis@member.fsf.org>

    * jsXe now loads plugins from both ~/.jsxe/jars and the install
      directory.
    * Added the soft tabs property to the document options.

01/18/2005  version 0.3 pre10   Ian Lewis <IanLewis@member.fsf.org>

    * Added some new functionality for action plugins to add menu items
      to the tools menu.
    * Added a method to XMLDocument that allows you to get a copy of the
      underlying Document object.
