@@ -24,8 +24,6 @@ TODO:
 * Version 0.3 beta (Plugin + Namespace Support)
 
     * Make any changes necessary for an early version of the Schema View.
-    * Fix bug where you can remove a namespace declaration when it is used
-      by attributes in the document.
 
 * Version 0.4 beta (DTD/Schema support)
     
@@ -54,6 +52,7 @@ TODO:
     * Create some sort of interface to deal with editing of entity reference.
     
     * Add support for evaluating an XPath expression on an XMLDocument.
+        * Maybe add a XPath evaluation field
     
 * Version 0.5 beta (Actions)
     
@@ -126,6 +125,9 @@ TODO:
       cursor is dumb in linux.
     
     * Make a splash screen that displays on startup.
+    
+    * Add a file browser to jsXe. This will allow users to easily open
+      documents and navigate among many documents.
     
     * Create a help system for jsXe.
         * Create documentation for developing views with jsXe
